--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
 <section class="section">
 <div class="columns">
 <div class="column is-one-quarter ">
-<% include shop/left%>
+<% include shop/cat %>
 
 </div>
 
