--- a/views/par/nav.ejs
+++ b/views/par/nav.ejs
@@ -1,7 +1,7 @@
 ﻿<nav class="navbar is-black" role="navigation" aria-label="main navigation">
 
 <div class="navbar-brand">
-    <a class="navbar-item" href="https://bulma.io">
+    <a class="navbar-item" href="/">
         tmStore
     </a>
 
@@ -20,25 +20,24 @@
 
 
 
-<a class="button is-black" href="/ ">Sign up&nbsp;
+<a class="button is-black" href="/usr-up">Sign up&nbsp;
 <img src="img/search.png" alt="search/icon"></a>
 
-<a class="button is-black" href="/shop/my">Log in&nbsp;
+<a class="button is-black" href="/usr-my">Log in&nbsp;
 <img src="img/login.png" alt="login/icon"></a>
 
-<a class="button is-black" href="/shop/cart">Cart&nbsp;
+<a class="button is-black" href="/cart">Cart&nbsp;
 <img src="img/cart.png" alt="cart/icon"></a>
 
-
-<a class="button is-black" href="/shop/favorite">Favorite&nbsp;
+<a class="button is-black" href="/usr-fav">Favorite&nbsp;
 <img src="img/heart.png" alt="heart/icon"></a>
 
 
-<a class="button is-black" href="/shop/history">history&nbsp;
+<a class="button is-black" href="/usr-his">history&nbsp;
 <img src="img/history.png" alt="history/icon"></a>
 
 
-<a class="button is-black" href="/shop/">Info&nbsp;
+<a class="button is-black" href="/">Info&nbsp;
 <img src="img/info.png" alt="info/icon"></a>
 
 
