--- a/views/item.ejs
+++ b/views/item.ejs
@@ -3,32 +3,23 @@
 <% include par/nav%>
 <html>
 <body>
-<!-- menu -->
 
 <!-- menu -->
 
 <div class="section">
 <div class="columns">
 <div class="column is-one-quarter">
-
-<% include shop/cat %>
+<% include shop/cat%>
 </div>
 
 <div class="column">
 <nav class="breadcrumb has-arrow-separator" aria-label="breadcrumbs">
 <ul>
-<li><a href="/">top</a></li>
-<li class="is-active"><a href="/" aria-current="page">
-<% if(par=="art") { %>
-artist
-<% } else { %>
-<%= par %>
-<% } %>
-</a></li>
+    <li><a href="/">top</a></li>
+    <li class="is-active"><a href="cart-<%= par %>" aria-current="page"><%= par %></a></li>
 </ul>
 </nav>
-
-<% include shop/dra %>
+<% include shop/item %>
 
 </div><!-- /col-->
 </div><!-- /row-->
