--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -1,16 +1,23 @@
-<% if(mer) { %>
+<% if(sar) { %>
+
+<div class="level">
+<div class="level-right">
+<% for(var i=0;i<sar.length;i++) { %>
 <article class="media">
+
 <figure class="media-left">
+
 <p class="image is-100x100">
-<img src="img/cd/png/<%= sku %>.png">
+<img src="img/cd/png/<%= sar[i].sku %>.png">
 </p>
 </figure>
+
 <div class="media-content">
 <div class="content">
-<strong><%=shop.tit %>:<%= mer.name %></strong> 
+<strong><%=shop.tit %>:<%= sar[i].name %></strong> 
 <br>
-
 </div>
+
 <nav class="level is-mobile">
 <div class="level-left">
 <a class="level-item">
@@ -25,15 +32,19 @@
 </div>
 </nav>
 
-<form action="/cart">
-    <input type="hidden" name="name" value="<%= mer.name %>">
-    <input type="hidden" name="sku" value="<%= mer.sku %>">
-    <input type="hidden" name="pri" value="<%= mer.pri %>">
-    <input type="number" name="uni" value="1">
-    <button class="button" type="submit">submit</button>
-</form>
-
   </div>
   </article>
+  <% } %>
+</div>
+<div class="level-right">
+   rite 
+
+</div>
+</div>
+
+<form action="/paypal">
+<button class="button" type="submit">submit</button>
+</form>
+
 
 <% } else {%> no sku <% } %>
