--- a/views/shop/item.ejs
+++ b/views/shop/item.ejs
@@ -25,7 +25,7 @@
 </div>
 </nav>
 
-<form action="/cart">
+<form method="post" action="/cart">
     <input type="hidden" name="name" value="<%= mer.name %>">
     <input type="hidden" name="sku" value="<%= mer.sku %>">
     <input type="hidden" name="pri" value="<%= mer.pri %>">
