--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -1,7 +1,5 @@
 <% if(sar) { %>
 
-<div class="level">
-<div class="level-right">
 <% for(var i=0;i<sar.length;i++) { %>
 <article class="media">
 
@@ -33,15 +31,15 @@
 </nav>
 
   </div>
+  <div class="media-content"> 
+<form action="/cart" method="get">
+    <input type="hidden" name="clr" value="yes">
+<button class="button" type="submit">clear</button>
+</form>
+</div>
+
   </article>
   <% } %>
-</div>
-<div class="level-right">
-   rite 
-
-</div>
-</div>
-
 <form action="/paypal">
 <button class="button" type="submit">submit</button>
 </form>
