--- a/views/shop/item.ejs
+++ b/views/shop/item.ejs
@@ -28,8 +28,8 @@
 <form method="post" action="/cart">
     <input type="hidden" name="name" value="<%= mer.name %>">
     <input type="hidden" name="sku" value="<%= mer.sku %>">
-    <input type="hidden" name="pri" value="<%= mer.pri %>">
-    <input type="number" name="uni" value="1">
+    <input type="hidden" name="pri" value="<%= mer.pri %>"><br>
+    <input type="number" name="uni" value="1"><br><br>
     <button class="button" type="submit">submit</button>
 </form>
 
