--- a/views/category.ejs
+++ b/views/category.ejs
@@ -3,30 +3,16 @@
 <% include par/nav%>
 <html>
 <body>
-<!-- menu -->
-
-<!-- menu -->
 
 <div class="section">
 <div class="columns">
 <div class="column is-one-quarter">
 
+<% include shop/bre%>
 <% include shop/cat %>
 </div>
 
 <div class="column">
-<nav class="breadcrumb has-arrow-separator" aria-label="breadcrumbs">
-<ul>
-<li><a href="/">top</a></li>
-<li class="is-active"><a href="/" aria-current="page">
-<% if(par=="art") { %>
-artist
-<% } else { %>
-<%= par %>
-<% } %>
-</a></li>
-</ul>
-</nav>
 
 <% include shop/dra %>
 
