--- a/views/par/foot.ejs
+++ b/views/par/foot.ejs
@@ -1,15 +1,11 @@
 ﻿<footer class="footer ">
- <div class="content has-text-centered is-info">
- <p>
+ <div class="content has-text-centered has-background-black">
 
 <span>&#169;&nbsp;TMS MUSIC CO.,LTD. ALL Rights Reserved.</span><br>
-
-
 
  <strong>Bulma</strong> by <a href="https://jgthms.com">Jeremy Thomas</a>. The source code is licensed
  <a class="is-info" href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
  is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
- </p>
  </div>
 </footer>
 
