--- a/views/shop/uni.ejs
+++ b/views/shop/uni.ejs
@@ -1,18 +1,18 @@
-<form method="get" action="cart">
+<form method="post" action="/cart">
 <input class="input" type="number" name="reset" value="<%= sar[i].uni %>">
-<input type="text" name="sku" value="<%= sar[i].sku%>">
-<button class="button" type="button" onclick="putUni()">get</button>
+<input type="text" name="rsku" value="<%= sar[i].sku%>">
+<button class="button" type="submit">get</button>
 </form>
 
-<button class="button" type="button" onclick="putUni()">put</button>
+<button class="button" type="submit" onclick="putUni()">put</button>
 
 <script>
 function putUni(){
 var loc= "http://localhost:3000";
 var xhr = new XMLHttpRequest();
-var str="sku="+sku
-<!-- var str="?sku=355" -->
-xhr.open("get", loc+"/uni?"+str, true);
+var str="rsku="+<%= sar[i].sku%>
+<!-- var str="sku=355" -->
+xhr.open("put", loc+"/uni?"+str, true);
 xhr.send()
 }
 
