--- a/views/shop/cat.ejs
+++ b/views/shop/cat.ejs
@@ -1,16 +1,44 @@
-<div class="box ">
+
+
 <div class="has-text-centered">
-category
+<div align="Left">
+<a class="button is-black">
+Category</div></a>
 </div>
 
-    <ul>
-        <li><a href="category-art">artist</a></li>
-        <li><a href="category-ost">ost</a></li>
-        <li><a href="category-cha">chara song</a></li>
-        <li><a href="category-dra">drama</a></li>
-        <li><a href="category-com">compilation</a></li>
-        <li><a href="category-goo">goods</a></li>
-        <li><a href="category-mis">other</a></li>
-    </ul>
+<br><br>
+
+      <ul>
+
+        <li><a href="cart-art">Artist CD</a></li> <br>
+
+        <li><a href="cart-ost">Sound Track</a></li> <br>
+        
+        <li><a href="cart-cha">Character Song</a></li><br>
+        
+        <li><a href="cart-dra">Drama CD</a></li><br>
+        
+        <li><a href="cart-com">Compiration CD</a></li><br>
+        
+        <li><a href="cart-goo">Goods</a></li><br>
+        
+        <li><a href="cart-mis">Other</a></li><br>
+    
+      </ul>
+
+<br><br><br><br><br><br>
+
+<div align="left">
+<a href="https://twitter.com/tmsm2011" target="_blank"><img src="img/tw.png" alt=tw/icon width="40" height="40" align="center"> </a> &nbsp;
+
+<a href="https://www.youtube.com/user/tmsm2010" target="_blank">
+<img src="img/you.png" alt="youtube/icon" width="40" height="40" align="center"> </a>&nbsp;
+
+<a href="https://tmsmusic.tokyo" target="_blank">
+<img src="img/tmsm.png" alt="tmsm/icon" width="50" height="50" align="center"> </a> &nbsp;
 
 </div>
+
+
+
+
