--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -14,23 +14,13 @@
 <div class="content">
 <strong><%=shop.tit %>:<%= sar[i].name %></strong> 
 <br>
+
 </div>
 
-<nav class="level is-mobile">
-<div class="level-left">
-<a class="level-item">
-<span class="icon is-small"><i class="fa fa-reply"></i></span>
-</a>
-<a class="level-item">
-<span class="icon is-small"><i class="fa fa-retweet"></i></span>
-</a>
-<a class="level-item">
-<span class="icon is-small"><i class="fa fa-heart"></i></span>
-</a>
-</div>
-</nav>
+<% include ./lev %>
+<% include ./uni%>
 
-  </div>
+ </div>
   <div class="media-content"> 
 <form action="/cart" method="get">
 <input type="hidden" name="clr" value="yes">
@@ -42,11 +32,5 @@
   <% } %>
 
 <% } else {%> no sku
-<form action="/cart" method="get">
-<input type="hidden" name="clr" value="yes">
-<button class="button" type="submit">clear</button>
-</form>
-
-
 
 <% } %>
