--- a/views/pay/paidy.ejs
+++ b/views/pay/paidy.ejs
@@ -1,3 +1,4 @@
+<p class="button is-danger">paidy</p>
 <% if(sar) { %>
 
 <% for(var i=0;i<sar.length;i++) { %>
@@ -18,10 +19,10 @@
 </div>
 
 <% include ./lev %>
-<% include ./uni%>
 
  </div>
   <div class="media-content"> 
 </article>
 <% } %><!-- for-->
 <% } else {%> <%=shop.noit %><% } %>
+
