--- a/views/pay/paypal.ejs
+++ b/views/pay/paypal.ejs
@@ -1,3 +1,6 @@
+
+<p class="button is-info">paypal</p>
+
 <% if(sar) { %>
 
 <% for(var i=0;i<sar.length;i++) { %>
@@ -17,8 +20,6 @@
 
 </div>
 
-<% include ./lev %>
-<% include ./uni%>
 
  </div>
   <div class="media-content"> 
