--- a/views/par/head.ejs
+++ b/views/par/head.ejs
@@ -3,9 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="tehtml; charset=utf-8">
 
-<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" 
-rel="stylesheet">
-
+<script src="lib/jquery.min.js"></script>
 <link href="css/bul.css" rel="stylesheet">
 <link href="css/bas.css" rel="stylesheet">
 <link href="css/foot.css" rel="stylesheet">
