--- a/views/pay.ejs
+++ b/views/pay.ejs
@@ -14,8 +14,12 @@
 </div>
 
 <div class="column"> 
-<% include usr/sel%>
+    <% if(usr){ %>
+<% include pay/sel%>
+<% } else { %>
 
+<% include usr/in%>
+<% } %>
 </div><!-- /col-->
 </div><!-- /cols-->
 
