--- a/views/shop/cat.ejs
+++ b/views/shop/cat.ejs
@@ -1,5 +1,3 @@
-
-
 <div class="has-text-centered">
 <div align="Left">
 <a class="button is-black">
@@ -7,26 +5,7 @@ Category</div></a>
 </div>
 
 <br><br>
-
-      <ul>
-
-        <li><a href="cart-art">Artist CD</a></li> <br>
-
-        <li><a href="cart-ost">Sound Track</a></li> <br>
-        
-        <li><a href="cart-cha">Character Song</a></li><br>
-        
-        <li><a href="cart-dra">Drama CD</a></li><br>
-        
-        <li><a href="cart-com">Compiration CD</a></li><br>
-        
-        <li><a href="cart-goo">Goods</a></li><br>
-        
-        <li><a href="cart-mis">Other</a></li><br>
-    
-      </ul>
-
-<br><br><br><br><br><br>
+<% include ./ul %>
 
 <div align="left">
 <a href="https://twitter.com/tmsm2011" target="_blank"><img src="img/tw.png" alt=tw/icon width="40" height="40" align="center"> </a> &nbsp;
