--- a/views/shop/uni.ejs
+++ b/views/shop/uni.ejs
@@ -1,5 +1,5 @@
 <form method="get" action="/cart">
-<input class="input" type="number" name="rset" value="<%= sar[i].uni %>">
+<input class="input" min=0 type="number" name="rset" value="<%= sar[i].uni %>">
 <input type="text" name="rsku" value="<%= sar[i].sku%>">
 <button class="button" type="submit">get</button>
 </form>
