--- a/views/pay/paidy.ejs
+++ b/views/pay/paidy.ejs
@@ -24,5 +24,10 @@
   <div class="media-content"> 
 </article>
 <% } %><!-- for-->
+
+<% include ./aid%>
+
+
 <% } else {%> <%=shop.noit %><% } %>
+
 
