--- a/views/usr/his.ejs
+++ b/views/usr/his.ejs
@@ -1,3 +1,5 @@
+his
+
 <form action="/shop" method="post">
 E-mail:<br><input class="form-control" id="ema" type="email" name="email"  size="15">
 <br>
