--- a/views/usr/in.ejs
+++ b/views/usr/in.ejs
@@ -1,3 +1,5 @@
+<h1>ログイン</h1>
+
 <form action="/shop" method="post">
 E-mail:<br><input class="form-control" id="ema" type="email" name="email"  size="15">
 <br>
@@ -10,6 +12,6 @@ Password:<br><input class="form-control" id="pss" type="text" name="pss" value="
 アカウントをお持ちでない方<br><br>
 
 <form action="/shop/sig" method="get">
-<button type="submit" class="btn btn-danger">サイン イン</button>
+<button type="submit" class="btn btn-danger">サインイン</button>
 </form>
 
