--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -1,36 +1,39 @@
 <!DOCTYPE html>
 <% include par/head%>
 <% include par/nav%>
+
 <html>
 <body>
 
-<section class="has-background-white" style="padding:20px">
-<div class="columns">
+<!-- menu -->
 
-<div class="column is-one-quarter">
+<section class="section">
+	<div class="columns">
+		<div class="column is-one-quarter">
+		<% include shop/cat%>
+		</div><!--/col1/4-->
 
-<% include shop/bre%>
-<% include shop/cat%>
-</div>
 
-<div class="column is-two-quarter">
-    <% include shop/cart %><br>
-<% include shop/clr%>
-</div><!-- /col-->
+		<div class="column" style="">
+			<nav class="breadcrumb has-arrow-separator" aria-label="breadcrumbs">
+				<ul>
+				    <li><a href="/">top</a></li>
+				    <li class="is-active"><a href="cart-<%= par %>" aria-current="page">cart <%= par %></a></li>
+				</ul>
+			</nav>
+	
+		<% include shop/cart %>
 
-<div class="column is-one-quarter">
-    <% if(sar && sum){ %>
-    <% include shop/sum%><br><br>
-<% include shop/pay%>
-<% } %>
+		</div><!-- /col3/4-->
 
-</div><!-- /col-->
-</div><!-- /row-->
+	</div><!--/col-> 
 
-<div class="foot"><% include par/foot %></div>
+</section> <!--/section-->
 
-</section><!-- /container-fluid-->
+
 
 </body>
+<% include par/foot %>
+
 </html>
 
