--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -1,27 +1,36 @@
 <% if(sar) { %>
 
 <% for(var i=0;i<sar.length;i++) { %>
+
 <article class="media">
 
-<figure class="media-left">
+	<figure class="media-left">
+		<p class="image is-100x100">
+		<img src="img/cd/png/<%= sar[i].sku %>.png">
+		</p>
+	</figure>
+	
+	<div class="media-content">
+		<div class="content">
+		<strong><%=shop.tit %>:<%= sar[i].name %></strong> 
+		<br>
+		</div><!--/media-con-->
+	
+	<% include ./lev %>
+	<% include ./uni%>
+	
+	 </div><!--/media-con -->
 
-<p class="image is-100x100">
-<img src="img/cd/png/<%= sar[i].sku %>.png">
-</p>
-</figure>
+	  <div class="media-content"> 
+		<form action="/cart" method="get">
+		<input type="hidden" name="clr" value="yes">
+		<button class="button" type="submit">clear</button>
+		</form>
+	  </div><!--/media-con-->
 
-<div class="media-content">
-<div class="content">
-<strong><%=shop.tit %>:<%= sar[i].name %></strong> 
-<br>
-
-</div>
-
-<% include ./lev %>
-<% include ./uni%>
-
- </div>
-  <div class="media-content"> 
 </article>
-<% } %><!-- for-->
-<% } else {%> <%=shop.noit %><% } %>
+  <% } %>
+
+<% } else {%> no sku
+
+<% } %>
