--- a/views/shop/cat.ejs
+++ b/views/shop/cat.ejs
@@ -1,20 +1,27 @@
 <div class="has-text-centered">
-<div align="Left">
-<a class="button is-black">
-Category</div></a>
-</div>
+
+	<div align="Left">
+	<a class="button is-black">	Category</a>
+    </div> <!--/left-->
+
+</div><!--/text-cen -->
 
 <br><br>
-<% include ./ul %>
+
+<% include ../par/pcat %>
+
+<br><br><br><br><br><br>
 
 <div align="left">
-<a href="https://twitter.com/tmsm2011" target="_blank"><img src="img/tw.png" alt=tw/icon width="40" height="40" align="center"> </a> &nbsp;
 
-<a href="https://www.youtube.com/user/tmsm2010" target="_blank">
-<img src="img/you.png" alt="youtube/icon" width="40" height="40" align="center"> </a>&nbsp;
+	<a href="https://twitter.com/tmsm2011" target="_blank"><img src="img/tw.png" alt=tw/icon width="40" height="40" align="center">
+    </a> &nbsp;
+	
+	<a href="https://www.youtube.com/user/tmsm2010" target="_blank">
+	<img src="img/you.png" alt="youtube/icon" width="40" height="40" align="center"> </a>&nbsp;
+	
+	<a href="https://tmsmusic.tokyo" target="_blank">
+	<img src="img/tmsm.png" alt="tmsm/icon" width="50" height="50" align="center"> </a> &nbsp;
 
-<a href="https://tmsmusic.tokyo" target="_blank">
-<img src="img/tmsm.png" alt="tmsm/icon" width="50" height="50" align="center"> </a> &nbsp;
-
-</div>
+</div><!--/left-->
 
