--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -4,36 +4,37 @@
 
 <html>
 <body>
-
-<!-- menu -->
-
 <section class="section">
-	<div class="columns">
-		<div class="column is-one-quarter">
+<div class="columns">
+		<div class="column is-one-quarter has-background-ali">
 		<% include shop/cat%>
-		</div><!--/col1/4-->
+		</div><!-- col1 4-->
 
+<% if(sar!==null){ %>
+<div class="column is-two-quarters has-background-info"> 
 
-		<div class="column" style="">
-			<nav class="breadcrumb has-arrow-separator" aria-label="breadcrumbs">
-				<ul>
-				    <li><a href="/">top</a></li>
-				    <li class="is-active"><a href="cart-<%= par %>" aria-current="page">cart <%= par %></a></li>
-				</ul>
-			</nav>
-	
-		<% include shop/cart %>
+<% include shop/cart %>
+<% include shop/clr%>
 
-		</div><!-- /col3/4-->
+</div><!-- col3 4-->
 
-	</div><!--/col-> 
+<% if(sum!==0){ %>
+<div class="column is-one-quarter has-background-primary" style="">
 
-</section> <!--/section-->
+    <% include shop/sum %>
+    <% include shop/pay%>
 
+</div><!-- col3 4-->
+<% }  %>
 
+<% } else { %>&nbsp;
+<p class="button is-info"><%=shop.noit %></p>
+<% }  %>
+
+</div><!-- row--> 
+
+</section> 
 
 </body>
-<% include par/foot %>
-
 </html>
 
