--- a/views/par/pnav/inav.ejs
+++ b/views/par/pnav/inav.ejs
@@ -3,24 +3,23 @@
 	<div class="navbar-end">
 		<div class="navbar-item">
 		
-			<a class="button is-small is-white" href="/shop/my">新規会員登録</a>&nbsp;&nbsp;
-			
-			<a class="button is-black" href="/usr-up">Sign up&nbsp;
-			<img src="img/search.png" alt="search/icon"></a>
-			
-			<a class="button is-black" href="/usr-in">Log in&nbsp;
-			<img src="img/login.png" alt="login/icon"></a>
-			
+<% if(usr) {%>
+<a class="button is-black" href="/usr-my">
+<%= usr.name %>sama</a>
+<% }else{ %>
+<a class="button is-black" href="/usr-in">Log in&nbsp;
+<img src="img/login.png" alt="login/icon"></a>
+<a class="button is-small is-white" href="/usr-sign">新規会員登録</a>&nbsp;&nbsp;
+<% } %>
 			<a class="button is-black" href="/cart">Cart&nbsp;
 			<img src="img/cart.png" alt="cart/icon"></a>
-			
 			<a class="button is-black" href="/usr-fav">Favorite&nbsp;
 			<img src="img/heart.png" alt="heart/icon"></a>
-			
 			<a class="button is-black" href="/usr-his">history&nbsp;
 			<img src="img/history.png" alt="history/icon"></a>
-			
-			<a class="button is-black" href="/">Info&nbsp;
+<a class="button is-black" href="/usr-sea">Search&nbsp;
+<img src="img/search.png" alt="search/icon"></a>
+			<a class="button is-black" href="/usr-inf">Info&nbsp;
 			<img src="img/info.png" alt="info/icon"></a>
 
 		</div><!--navitem -->
