--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -28,7 +28,11 @@
 <% }  %>
 
 <% } else { %>&nbsp;
+
+<div class="column is-one-quarter has-background-tom has-text-centered">
 <p class="button is-info"><%=shop.noit %></p>
+</div>
+
 <% }  %>
 
 </div><!-- row--> 
