--- a/views/par/onav.ejs
+++ b/views/par/onav.ejs
@@ -11,7 +11,7 @@
 
 			<a class="button is-black" href="/usr-sea">Search&nbsp;
 <img src="img/search.png" alt="search/icon"></a>
-			<a class="button is-black" href="/usr-inf">Info&nbsp;
+			<a class="button is-black" href="/usr-fo">Info&nbsp;
 			<img src="img/info.png" alt="info/icon"></a>
 
 		</div><!--navitem -->
