--- a/views/usr/bk/sel.ejs
+++ b/views/usr/bk/sel.ejs
@@ -18,12 +18,12 @@
 
 <% } else if(par=="log") { %>
 <% include ./log %>
-
-<% } else if(par=="fo") { %>
-<% include ./fo %>
+<% } else if(par=="inf") { %>
+<% include ./inf %>
 
 <% } else if(par=="out") { %>
 <% include ./out %>
+
 
 <% } %>
 
