--- a/views/par/inav.ejs
+++ b/views/par/inav.ejs
@@ -3,26 +3,20 @@
 	<div class="navbar-end">
 		<div class="navbar-item">
 		
-            <% if(usr){ %>
-            <%= usr.name %><%=iusr.sama%>
-            <% } else { %>
-
-            <% }  %>
 <a class="button is-black has-text-white" href="/usr-my">
-    my page
+my page
 </a>
 <a class="button is-black" href="/usr-fav">Favorite&nbsp;
 			<img src="img/heart.png" alt="heart/icon"></a>
 			<a class="button is-black" href="/usr-his">history&nbsp;
 			<img src="img/history.png" alt="history/icon"></a>
 
-
 			<a class="button is-black" href="/cart">Cart&nbsp;
 			<img src="img/cart.png" alt="cart/icon"></a>
 
 			<a class="button is-black" href="/usr-sea">Search&nbsp;
 <img src="img/search.png" alt="search/icon"></a>
-			<a class="button is-black" href="/usr-inf">Info&nbsp;
+			<a class="button is-black" href="/usr-fo">Info&nbsp;
 			<img src="img/info.png" alt="info/icon"></a>
 
 		</div><!--navitem -->
