--- a/views/usr.ejs
+++ b/views/usr.ejs
@@ -10,7 +10,7 @@
 <% include shop/cat %>
 </div>
 
-<div class="column is-two-quarters">
+<div class="column is-three-quarters has-background-bei">
 <br>
 <% include usr/sel%>
 </div><!-- /col12-->
