--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -29,8 +29,9 @@
 
 <% } else { %>&nbsp;
 
-<div class="column is-one-quarter has-background-tom has-text-centered">
-<p class="button is-info"><%=shop.noit %></p>
+<div class="column is-three-quarter has-background-tom ">
+    <p class="button is-info"><%=shop.noit %></p><br>
+sss
 </div>
 
 <% }  %>
