--- a/views/usr/his.ejs
+++ b/views/usr/his.ejs
@@ -1,8 +1,8 @@
-<header class="has-text-centered">
+<p class="has-text-centered">
 <button class="button">
 history
 </button>
-</header><br>
+</p><br>
 <% if(usr) { %>
 <div class="columns">
 
