--- a/views/usr/in.ejs
+++ b/views/usr/in.ejs
@@ -1,6 +1,10 @@
 <% if(usr) { %>
-welcome 
-<%= usr.name %>
+<p class="has-text-centered">
+<button class="button">
+welcome <%= usr.name %>
+</button>
+</p><br>
+
 <form method="post" action="/usr-out">
     <input type="hidden" name="out" value="yes">
     <button class="button">log out</button>
