--- a/views/usr/his.ejs
+++ b/views/usr/his.ejs
@@ -1,45 +1,11 @@
-<p class="has-text-centered">
-<button class="button">
-history
-</button>
-</p><br>
 <% if(usr) { %>
-<div class="columns">
+<header class="has-t-cen bkg-ali">
+    welcome <%= usr.name %></header><br>
+<div class="row">
+<div class="col"><% include ./pid%></div>
 
-<div class="column has-background-mis">
-<header class="has-text-centered">
-<button class="button is-danger">
-paidy
-</button>
-</header><br>
-
-<% if(pid) { %>
-<% for (var i=0;i<pid.length;i++){ %>
-<%= pid[i].pid %><br>
-
-<% } %>
-<%} else {%>
-no paidy order
-<% } %>
-</div>
-
-<div class="column has-background-ali">
-<header class="has-text-centered">
-<button class="button is-info">
-paypal
-</button>
-</header><br>
-
-<% if(pal) { %>
-<% for (var i=0;i<pal.length;i++){ %>
-<%= pal[i].id%><br>
-
-<% } %>
-<%} else {%>
-no pal order
-<% } %>
-
-</div>
+<div class="col bkg-ali"><% include ./pal%></div>
+</div><!-- row-->
 
 <%} else {%>
 <% include ./in%>
