--- a/views/usr/log.ejs
+++ b/views/usr/log.ejs
@@ -1,5 +1,8 @@
 <% if(usr) { %>
-logged in.
+<p class="bkg-ali p-10">
+logged in.</p>
+
+<% include par/out%>
 <%} else {%>
-<% include ./in %>
+<% include ./in%>
 <%} %>
