--- a/views/usr/sel.ejs
+++ b/views/usr/sel.ejs
@@ -10,6 +10,10 @@
 <% } else if(par=="fav") { %>
 <% include ./fav %>
 
+<% } else if(par=="info") { %>
+<% include ./fo %>
+
+
 <% } else if(par=="his") { %>
 <% include ./his %>
 
@@ -19,14 +23,8 @@
 <% } else if(par=="log") { %>
 <% include ./log %>
 
-<% } else if(par=="fo") { %>
-<% include ./fo %>
-
 <% } else if(par=="out") { %>
 <% include ./out %>
-
-<% } else if(par=="tes") { %>
-<% include ./tes %>
 
 <% } %>
 
