--- a/views/paypal.ejs
+++ b/views/paypal.ejs
@@ -7,17 +7,15 @@
 <!-- menu -->
 
 <section class="section">
-<div class="columns">
-<div class="column is-one-quarter ">
+<div class="row">
+<div class="col is-one-quarter ">
 <% include shop/cat %>
 
 </div>
 
-<div class="column"> 
+<div class="col"> 
 <% if(usr){ %>
-
-<% include pay/pal%>
-
+<% include pay/sel%>
 <% } else { %>
 <% include usr/in%>
 <% } %>
