--- a/views/usr/my.ejs
+++ b/views/usr/my.ejs
@@ -1,10 +1,6 @@
-<p class="has-text-centered">
-<button class="button">
 my
-</button>
-</p><br>
-<article>
+
 <form method="post" action="/usr-out">
-<input type="hidden" name="out" value="yes">
-<button class="button">log out</button>
-</article>
+    <input type="hidden" name="out" value="yes">
+    <button class="button">log out</button>
+</form>
