--- a/views/usr/sign.ejs
+++ b/views/usr/sign.ejs
@@ -1,21 +1,19 @@
-<p class="has-text-centered">
-<button class="button ">ユーザー登録（無料）</button></p>
-
+<div class="button has-t-cen">ユーザー登録（無料）</div>
 <br>
 <form action="/usr-fin" method="post">
-    <p class="label"> Name</p>
-<input class="input" type="text" class="form-control" name="name" ><br>
+    <label class="label">Name</label>
+<input class="input" type="text" class="form-control" name="name" size="j0"><br>
 
-<p class="label">Password</p>
-<input class="input" type="text" class="form-control" name="pss" ><br>
+Password:<br>
+<input class="input" type="text" class="form-control" name="pss" size="80" ><br>
 
-<p class="label">E-mail</p>
-<input class="input" type="email" class="form-control" name="email" ><br>
+E-mail:<br>
+<input class="input" type="email" class="form-control" name="email" size="80" ><br>
 
-<p class="label"><a href="/shop/agmt" target="_blank">利用規約</a>をお読みください。
+<div style="text-align:center">登録する際は<a href="/shop/agmt" target="_blank">利用規約</a>をお読みください。
 <input class="checkbox" type="checkbox" name="chk" value="yes"> 同意する<br>
-</p>
 <br>
 <button type="submit" class="button is-danger">登録</button>
 </form>
+
 
